--- a/package.json
+++ b/package.json
@@ -11,16 +11,26 @@
   "dependencies": {
     "@heroicons/react": "^1.0.6",
     "@svgr/webpack": "^6.3.1",
+    "bcryptjs": "^2.4.3",
+    "firebase": "^9.9.2",
+    "formik": "^2.2.9",
+    "framer-motion": "^7.1.0",
     "next": "12.2.5",
     "next-pwa": "5.5.4",
     "next-seo": "^5.5.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-markdown": "^8.0.3",
+    "sweetalert2": "^11.4.26",
+    "uuid": "^8.3.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/node": "18.7.2",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "autoprefixer": "^10.4.8",
     "eslint": "8.21.0",
@@ -28,6 +38,7 @@
     "eslint-config-prettier": "^8.5.0",
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.13",
     "tailwindcss": "^3.1.8",
     "typescript": "4.7.4"
   }
